welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:9: error: not found: type Red
		    setCouleurBrosse(c:Red)
                                       ^MethodsPicture:11: error: not found: type Blue
		    setCouleurBrosse(c:Blue)
                                       ^MethodsPicture:13: error: not found: type Green
		    setCouleurBrosse(c:Green)
                                       ^